11.4.0 (31-01-2024)
- Refactor: Change invocation of DebitEntry#create method to pass the finantial entity [#qubIT-Fenix-4587]
- Refactor: Remove deprecated ITreasuryBridgeAPI#createDebt [#qubIT-Fenix-4912]
- Bug Fix: Set of academical act blocking off and block academic acts on debt in standalone and extracurricular debit entries [#qubIT-Fenix-4914]

11.3.11 (24-01-2024)
- Refactor: Refactor ITreasuryPlatformDependentServices implementation [#qubIT-Fenix-4794]

11.3.10 (23-01-2024)
- Improvement: Declare methods to get refined entity objects in treasury report beans [#qubIT-Fenix-4794]

11.3.9 (18-01-2024)
- Refactor: Revert translation of exempted amount in portuguese [#qubIT-Fenix-4748]

11.3.8 (17-01-2024)
- Refactor: Change InvoiceEntry::getAssociatedFinantialEntity to InvoiceEntry::getFinantialEntity [#qubIT-Fenix-4587]

11.3.7 (12-01-2024)
- Improvement: Add method to AcademicTreasuryEvent, to calculate the registration tuition amount including other events that account for tuition [#UL-IGOT-1569]
- Bug Fix: Mark reservation tax event target as accounted for tuition, if it will discount in registration tuition amount [#UL-IGOT-1569]

11.3.6 (10-01-2024)
- Improvement: Add finantial entity information in debt reports [#qubIT-Fenix-4794]

11.3.5 (09-01-2024)
- Improvement: Add document certification information in debt reports [#qubIT-Fenix-4794]
- Bug Fix: Fill information in debt report for debit entries associated with custom academic debt treasury events [#qubIT-Fenix-4794]
- Improvement Fill settlement report with invoice entry net exemption [#qubIT-Fenix-4794]
- Bug Fix: Translate missing message key [#qubIT-Fenix-4748]

11.3.4 (03-01-2024)
- Bug Fix: Translate missing message key [#qubIT-Fenix-4748]

11.3.3 (28-12-2023)
- Refactor: Remove usage of execution degree finder by academic interval [#qubIT-Fenix-1590]