@@ -267,14 +267,21 @@ public class SettlementReportEntryBean implements SpreadsheetRow {
         final IAcademicTreasuryPlatformDependentServices academicTreasuryServices =
                 AcademicTreasuryPlataformDependentServicesFactory.implementation();
 
-        final DebitEntry debitEntry =
+        DebitEntry debitEntry =
                 invoiceEntry.isDebitNoteEntry() ? (DebitEntry) invoiceEntry : ((CreditEntry) invoiceEntry).getDebitEntry();
 
+        TreasuryEvent treasuryEvent = null;
         if (debitEntry != null) {
+            treasuryEvent = debitEntry.getTreasuryEvent();
+        } else if (invoiceEntry.isCreditNoteEntry()) {
+            treasuryEvent = ((CreditEntry) invoiceEntry).getTreasuryEvent();
+        }
+
+        if (treasuryEvent != null) {
 
             // Degree && ExecutionYear && ExecutionInterval
-            if (debitEntry.getTreasuryEvent() != null && debitEntry.getTreasuryEvent() instanceof AcademicTreasuryEvent) {
-                final AcademicTreasuryEvent academicTreasuryEvent = (AcademicTreasuryEvent) debitEntry.getTreasuryEvent();
+            if (treasuryEvent instanceof AcademicTreasuryEvent) {
+                final AcademicTreasuryEvent academicTreasuryEvent = (AcademicTreasuryEvent) treasuryEvent;
 
                 if (academicTreasuryEvent.isForRegistrationTuition()) {
                     this.registrationNumber = academicTreasuryEvent.getRegistration().getNumber();
@@ -286,28 +293,28 @@ public class SettlementReportEntryBean implements SpreadsheetRow {
 
                 } else if (academicTreasuryEvent.isForStandaloneTuition()
                         || academicTreasuryEvent.isForExtracurricularTuition()) {
-                    if (debitEntry.getCurricularCourse() != null) {
+                    if (debitEntry != null && debitEntry.getCurricularCourse() != null) {
                         this.degreeType = academicTreasuryServices
                                 .localizedNameOfDegreeType(debitEntry.getCurricularCourse().getDegree().getDegreeType());
                         this.degreeCode = debitEntry.getCurricularCourse().getDegree().getCode();
                         this.degreeName = debitEntry.getCurricularCourse().getDegree().getPresentationName();
                     }
 
-                    if (debitEntry.getExecutionSemester() != null) {
+                    if (debitEntry != null && debitEntry.getExecutionSemester() != null) {
                         this.executionYear = academicTreasuryServices()
                                 .executionYearOfExecutionSemester(debitEntry.getExecutionSemester()).getQualifiedName();
                         this.executionSemester = debitEntry.getExecutionSemester().getQualifiedName();
                     }
 
                 } else if (academicTreasuryEvent.isForImprovementTax()) {
-                    if (debitEntry.getCurricularCourse() != null) {
+                    if (debitEntry != null && debitEntry.getCurricularCourse() != null) {
                         this.degreeType = academicTreasuryServices
                                 .localizedNameOfDegreeType(debitEntry.getCurricularCourse().getDegree().getDegreeType());
                         this.degreeCode = debitEntry.getCurricularCourse().getDegree().getCode();
                         this.degreeName = debitEntry.getCurricularCourse().getDegree().getPresentationName();
                     }
 
-                    if (debitEntry.getExecutionSemester() != null) {
+                    if (debitEntry != null && debitEntry.getExecutionSemester() != null) {
                         this.executionYear = academicTreasuryServices()
                                 .executionYearOfExecutionSemester(debitEntry.getExecutionSemester()).getQualifiedName();
                         this.executionSemester = debitEntry.getExecutionSemester().getQualifiedName();
@@ -364,9 +371,7 @@ public class SettlementReportEntryBean implements SpreadsheetRow {
                     this.degreeName = academicTreasuryEvent.getRegistration().getDegree().getPresentationName();
                     this.executionYear = academicTreasuryEvent.getExecutionYear().getQualifiedName();
                 }
-            } else if (debitEntry.getTreasuryEvent() != null) {
-                final TreasuryEvent treasuryEvent = debitEntry.getTreasuryEvent();
-
+            } else {
                 if (!Strings.isNullOrEmpty(treasuryEvent.getDegreeCode())) {
                     this.degreeCode = treasuryEvent.getDegreeCode();
                 }
@@ -380,11 +385,11 @@ public class SettlementReportEntryBean implements SpreadsheetRow {
                 }
             }
 
-            if (Strings.isNullOrEmpty(this.degreeCode)) {
+            if (debitEntry != null && Strings.isNullOrEmpty(this.degreeCode)) {
                 this.degreeCode = debitEntry.getDegreeCode();
             }
 
-            if (Strings.isNullOrEmpty(this.executionYear)) {
+            if (debitEntry != null && Strings.isNullOrEmpty(this.executionYear)) {
                 this.executionYear = debitEntry.getExecutionYearName();
             }
         }
