@@ -1,3 +1,5 @@
+- Improvement: Print credit entry academic information, if it is associated with treasury event [#qubIT-Fenix-4928]
+
 11.4.0 (31-01-2024)
 - Refactor: Change invocation of DebitEntry#create method to pass the finantial entity [#qubIT-Fenix-4587]
 - Refactor: Remove deprecated ITreasuryBridgeAPI#createDebt [#qubIT-Fenix-4912]
